syntax = "proto3";

package inventory.v1;

// Log level for exporters
enum LogLevel {
  // Auto
  LOG_LEVEL_UNSPECIFIED = 0;
  LOG_LEVEL_FATAL = 1;
  LOG_LEVEL_ERROR = 2;
  LOG_LEVEL_WARN = 3;
  LOG_LEVEL_INFO = 4;
  LOG_LEVEL_DEBUG = 5;
}
